local properties added

--- a/webapp/src/main/java/propertyfiles/Text_en.properties
+++ b/webapp/src/main/java/propertyfiles/Text_en.properties
@@ -1,3 +1,13 @@
 language=en
 country=US
 HEADER_HELLO=Hello
+HEADER_LOGTOCAB=login to personal cabinet
+HEADER_LOGIN=Login\:
+HEADER_PASSWORD=Password\:
+HEADER_FORGOTPASS=Forgot password?
+HEADER_REGISTER=Register
+HEADER_REMINDPASS=Remind the password
+HEADER_REGMAILTOSEND=Please enter your registration email address
+HEADER_BT_LOGIN=Log In
+PLACEHOLDER_PASS=Password
+PLACEHOLDER_NAME=e-mail
