--- a/webapp/src/main/java/propertyfiles/Text_en.properties
+++ b/webapp/src/main/java/propertyfiles/Text_en.properties
@@ -11,3 +11,4 @@ HEADER_REGMAILTOSEND=Please enter your registration email address
 HEADER_BT_LOGIN=Log In
 PLACEHOLDER_PASS=Password
 PLACEHOLDER_NAME=e-mail
+FLAG_LOCATION=img/uk_flag_icon.png
