--- a/webapp/src/main/java/propertyfiles/Text_en.properties
+++ b/webapp/src/main/java/propertyfiles/Text_en.properties
@@ -1,6 +1,6 @@
 language=en
 country=US
-HEADER_HELLO=Hello
+HEADER_HELLO=Hello 
 HEADER_LOGTOCAB=login to personal cabinet
 HEADER_LOGIN=Login\:
 HEADER_PASSWORD=Password\:
@@ -12,3 +12,11 @@ HEADER_BT_LOGIN=Log In
 PLACEHOLDER_PASS=Password
 PLACEHOLDER_NAME=e-mail
 FLAG_LOCATION=img/uk_flag_icon.png
+BASKET_EMPTY=Your basket is empty
+MY_CABINET=My Cabinet
+LOG_OUT=Log Out
+MY_BASKET=My basket
+USER_MESSAGE=you have
+USER_MESSAGE2=message
+MAKE_ORDER=Make an order
+REMEMBER_ME=Remember me
