local properties added

--- a/webapp/src/main/java/propertyfiles/Text_en.properties
+++ b/webapp/src/main/java/propertyfiles/Text_en.properties
@@ -21,3 +21,29 @@ USER_MESSAGE2=message
 MAKE_ORDER=Make an order
 REMEMBER_ME=Remember me
 ADMINISTRATION=Administration
+HEADER_ENTEREMAIL=Please enter your email\:
+HEADER_ENTERPASS=Enter your password\:
+HEADER_REPEATPASS=Repeat password
+HEADER_SEND=Send
+CAT_PHONES_MP3=Phones, MP3
+CAT_SMARTPHONES=Smartphones
+CAT_LAPTOP=Laptops, tablets and computers
+CAT_HOUSESTUFF=Household appliances and interior
+CAT_AUDIO=Audio, Video, Photo, TV
+CAT_CAR=Car goods
+CAT_HOUSEHOLD=Household products
+CAT_MUSIK=Musical instruments
+CAB_PERSDATA=Personal data
+CAB_MYORDER=My orders
+CAB_EDITDATA=Edit personal data
+CAB_CHANGEPASS=Change password
+CAB_NAME=Name\:
+CAB_SECNAME=Second name\:
+CAB_EMAIL=Email\:
+CAB_DELADR=Delivery address\:
+CAB_REGDATE=Site registration date\:
+CAB_DISCOUNT=Personal discount\:
+BASKET_NAME=Name
+BASKET_DESK=Description
+BASKET_Q_TY=Q-ty
+BASKET_PRICE=Price
